
## 2025-08-04 (0.4.0)
- Added Pydantic `Settings` for configuration.
- Implemented secure password hashing utilities.
- Refactored `DbAuthProvider` to support async Postgres backend while retaining in-memory fallback.
- Created FastAPI auth routes (`/auth/signup`, `/auth/login`) with request/response schemas.
- Added database session dependency and mounted routes in main app.
- New runtime deps: `alembic`, `python-dotenv`.

## 2025-08-04 (0.4.1)
- Introduced initial pytest suite: `tests/test_health.py` verifies health endpoint; `tests/test_auth.py` covers signup & login using in-memory auth provider via dependency override.

## 2025-08-04 (0.5.0)
- Added Alembic configuration (`backend/alembic.ini`) and migration environment.
- Created initial migration `20250804_01_initial.py` with organizations, users, usertokens tables.
- Updated `TODO_CleverBrag_Integration` with reminder to publish `onyx_connectors` package and update dependency in Phase 2.

## 2025-08-04 (0.6.0)
- Added Row Level Security (RLS) migration `20250804_02_rls.py` enabling tenant isolation on `user` and `usertoken` tables.
- Introduced `backend.db.rls.set_current_org` helper and updated `get_db` dependency to set `app.current_org` based on `X-Org-ID` header.
- Added dependency helpers in `backend/deps.py`.
- New endpoint `/auth/refresh` issues new token pairs.
- Tests updated and still green.

## 2025-08-04 (0.7.0)
- Added Testcontainers-based integration test (`tests/integration/test_rls.py`) that spins up Postgres, runs Alembic migrations, signs up users in two orgs, and verifies RLS isolation.
- Introduced `testcontainers[postgresql]` dev dependency.
- Auth provider factory integrated into routes; tests updated accordingly.

## 2025-08-04 (0.8.0)
- Introduced GitHub Actions workflow `.github/workflows/ci.yml` running Ruff lint, Mypy type checks, unit + integration tests (with Postgres service).