@@ -1,1 +1,5 @@
+# Python byte-code
+__pycache__/
+*.py[cod]
+
 LegacyCode/
