@@ -1,0 +1,5 @@
+from enum import Enum
+
+class IndexModelStatus(str, Enum):
+    ENABLED = "enabled"
+    DISABLED = "disabled" 
