@@ -41,3 +41,6 @@
 
 ## 2025-08-04 (0.8.0)
 - Introduced GitHub Actions workflow `.github/workflows/ci.yml` running Ruff lint, Mypy type checks, unit + integration tests (with Postgres service).
+
+## 2025-08-05 (0.9.0)
+- Phase 2 kick-off: added smoke test ensuring `connectors.onyx` runtime can be imported and subclassed (`tests/test_connector_import.py`).
